<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    tools:context=".Activities.SignUpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageBtnCard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="85dp"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/signUpprofileImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/profile_icon"
            android:scaleType="fitCenter"
            app:layout_constraintCircleRadius="10000dp"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintVertical_bias="0.126" />

    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/signUpNameEdt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/userName"
        android:textColorHint="@color/cardview_light_background"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBtnCard"
        app:layout_constraintVertical_bias="0.161" />

    <EditText
        android:id="@+id/signUpEmailEdt"
        android:layout_width="match_parent"
        android:textColorHint="@color/cardview_light_background"
        android:layout_height="50dp"
        android:background="@drawable/input_outline"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signUpNameEdt"
        app:layout_constraintVertical_bias="0.17" />

    <EditText
        android:id="@+id/signUpPswEdt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/cardview_light_background"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailEdt"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/signUpBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpBtn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPswEdt"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/signUpSignInBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/cardview_light_background"
        android:text="@string/SignInBtn"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPswEdt"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>