<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="15dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/curved"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageCardView"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:cardCornerRadius="35dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/profileImgID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@mipmap/profile_icon"
                        android:scaleType="fitCenter"
                        app:layout_constraintCircleRadius="10000dp"
                        app:layout_constraintHorizontal_bias="0.475"
                        app:layout_constraintVertical_bias="0.126"  />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/fullNameID"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/imageCardView"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="16dp"
                    android:paddingLeft="5dp"
                    android:hint="@string/poster_name"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/curved"/>

                <TextView
                    android:id="@+id/timestampList"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textColor="@color/grayColor"
                    android:layout_below="@+id/fullNameID"
                    android:padding="5dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_toEndOf="@+id/imageCardView"
                    android:layout_toRightOf="@+id/imageCardView"
                    android:text="Date created:"
                    android:textSize="13sp"
                    android:textStyle="italic" />
            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/curved">

                <ImageView
                    android:id="@+id/crdImageViewID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:foregroundGravity="center"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@drawable/image_three" />

                <TextView

                    android:id="@+id/cardPostTitleID"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/postTitle"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />



                <TextView
                    android:id="@+id/cardPostDescID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/postDesc"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/grayColor"
                    android:background="@drawable/curved"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>