<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    app:layout_constraintCircleRadius="30dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="true"
        app:cardElevation="15dp"

        android:backgroundTint="@color/darkGrayColor">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectanguler"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:padding="10dp"
                android:background="@drawable/squar">

                <TextView
                    android:id="@+id/titleId"
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="15dp"
                    android:text="@string/addMoment"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="italic|bold" />

            </RelativeLayout>


            <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/curved">


                <ImageButton
                    android:id="@+id/popUpImgBtnID"
                    android:layout_width="wrap_content"
                    android:layout_height="190dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:foregroundGravity="fill"
                    android:scaleType="fitCenter"
                    android:src="@drawable/image_btn" />

            <EditText
                android:id="@+id/popUpEdtTitleID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/popUpImgBtnID"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/input_outline"
                android:hint="@string/title"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
            <EditText
                android:id="@+id/popUpEdtDescID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/popUpEdtTitleID"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/input_outline"
                android:hint="@string/PosrDescription"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/popUpShareBtnID"
                android:layout_width="25dp"
                android:layout_height="28dp"
                android:layout_below="@+id/popUpEdtDescID"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@android:drawable/ic_menu_share"
                 />

            <Button
                android:id="@+id/popUpcancelBtnID"
                android:layout_width="25dp"
                android:layout_height="28dp"
                android:layout_below="@+id/popUpEdtDescID"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="20dp"
                android:layout_toStartOf="@+id/popUpShareBtnID"
                android:layout_toLeftOf="@+id/popUpShareBtnID"
                android:layout_marginRight="15dp"
                android:background="@android:drawable/ic_menu_close_clear_cancel"
                android:textColor="@color/white" />


          </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>